; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dh/extr_dh_ameth.c_i2d_dhp.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dh/extr_dh_ameth.c_i2d_dhp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@dhx_asn1_meth = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i8**)* @i2d_dhp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2d_dhp(%struct.TYPE_3__* %0, i32* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8** %2, i8*** %7, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, @dhx_asn1_meth
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %6, align 8
  %14 = load i8**, i8*** %7, align 8
  %15 = call i32 @i2d_DHxparams(i32* %13, i8** %14)
  store i32 %15, i32* %4, align 4
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = call i32 @i2d_DHparams(i32* %17, i8** %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @i2d_DHxparams(i32*, i8**) #1

declare dso_local i32 @i2d_DHparams(i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
